--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap");
 @import "https://www.nerdfonts.com/assets/css/webfont.css";
+
+:root {
+  --noise-url: url("/assets/images/rainbow.png");
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -14,7 +19,6 @@ body {
   z-index: 0;
 }
 
-/* Pseudo-element for background image only */
 body::before {
   content: "";
   position: fixed;
@@ -23,22 +27,66 @@ body::before {
   width: 100vw;
   height: 100vh;
   background-image: url("/assets/images/design.png");
-  /* background-size: cover; */
-  /* background-position: bottom; */
-  opacity: 0.3; /* ✅ Image opacity only */
-  z-index: -1; /* Behind everything */
-}
-.noise {
-  position: fixed;
-  top: 0;
-  z-index: 10;
-  object-fit: cover;
-  pointer-events: none;
-  height: 100vh;
-  object-fit: contain;
-  opacity: 0.6;
+  z-index: -1;
 }
 
+.noisecont {
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 0.25;
+  z-index: 9999;
+  pointer-events: none;
+}
+
+.noisecont::before {
+  content: "";
+  z-index: 9999;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-image: var(--noise-url);
+  animation: noise 0.1s linear infinite;
+}
+@keyframes noise {
+  0% {
+    background-position: 0 0;
+  }
+  10% {
+    background-position: -5% -10%;
+  }
+  20% {
+    background-position: -15% -5%;
+  }
+  30% {
+    background-position: 5% -25%;
+  }
+  40% {
+    background-position: 20% 25%;
+  }
+  50% {
+    background-position: -25% 10%;
+  }
+  60% {
+    background-position: 15% 5%;
+  }
+  70% {
+    background-position: 0 15%;
+  }
+  80% {
+    background-position: 25% 35%;
+  }
+  90% {
+    background-position: -10% 10%;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
 header {
   height: 27vh;
   /* background-color: var(--violet); */
@@ -101,7 +149,7 @@ nav ul {
   padding: 10px;
   gap: 10px;
   border-left: 2px solid var(--lavender);
-  transition: all 0.2s ease-in;
+  /* transition: all 0.2s ease-in; */
 }
 
 nav ul li {
@@ -112,6 +160,7 @@ nav ul li {
   display: flex;
   align-items: center;
   gap: 10px;
+  transition: all 0.1s ease-in;
 }
 
 nav {
@@ -198,7 +247,7 @@ footer {
   padding: 0 20px;
 }
 
-footer div>span {
+footer div > span {
   display: inline-block;
   min-width: 150px;
   text-align: right;
