--- a/css/main.css
+++ b/css/main.css
@@ -121,7 +121,7 @@ header .instructions {
   width: 30vw;
 }
 
-header .instructions:hover{
+header .instructions:hover {
   cursor: pointer;
 }
 
@@ -143,19 +143,18 @@ header .instructions:hover{
   opacity: 0;
   pointer-events: none;
   transition: opacity 0.2s ease-in-out;
-  width: 200px;      /* Set your desired width */
-  height: 60px;      /* Set your desired height */
-  display: flex;     /* Center content vertically and horizontally */
+  width: 200px; /* Set your desired width */
+  height: 60px; /* Set your desired height */
+  display: flex; /* Center content vertically and horizontally */
   align-items: center;
   justify-content: center;
   text-align: center;
-  overflow: hidden;  /* Hide overflow if content is too large */
+  overflow: hidden; /* Hide overflow if content is too large */
   white-space: normal;
 }
 *[data-tooltip]:hover::before {
   opacity: 1;
 }
-
 
 main {
   height: 70vh;
@@ -483,4 +482,124 @@ footer div > span {
   display: inline-block;
   min-width: 150px;
   text-align: right;
+}
+
+@media (max-width: 1750px) {
+  .right {
+    width: 65%;
+  }
+  /* .terminal {
+    width: 90%;
+  } */
+  .left {
+    width: 35%;
+  }
+  .projectimage img {
+    width: 450px;
+  }
+  .lang,
+  .tools {
+    gap: 10px 7px;
+  }
+}
+
+@media (max-width: 1500px) {
+  .terminal {
+    width: 85%;
+    padding: 30px;
+    min-height: 70%;
+  }
+  :root {
+    --normal: 22px;
+    --small: 18px;
+  }
+  .prompt .text {
+    line-height: 26px;
+  }
+  header .hey img {
+    width: 60vw;
+    bottom: 30px;
+  }
+  .content .contact > a {
+    width: 45%;
+  }
+  .terminal .contact {
+    /* font-size: var(--small); */
+    text-overflow: ellipsis;
+    margin-top: 0;
+  }
+  .content .contact > a .details .userid {
+    overflow-wrap: anywhere;
+    text-align: left;
+  }
+}
+
+@media (max-width: 1250px) {
+  .content {
+    padding: 0px;
+  }
+  .content .contact > a i {
+    font-size: 40px;
+  }
+}
+
+@media (max-height: 850px) {
+  header {
+    height: 23vh;
+  }
+  main {
+    height: 74vh;
+  }
+  :root {
+    --normal: 20px;
+    --small: 16px;
+  }
+  .terminal {
+    height: 65%;
+    gap: 10px;
+  }
+  .terminal .prompt div{
+    margin-top: -10px;
+  }
+  .content .project .group .projectimage {
+    width: 350px;
+    height: 240px;
+  }
+
+  .projectimage img {
+    width: 100%;
+    height: 100%;
+  }
+  .rightarr,
+  .leftarr {
+    font-size: 30px;
+  }
+  .content .contact{
+    justify-content: space-around;
+  }
+  .content .credits .used {
+    font-size: 18px;
+    margin-top: 0;
+  }
+  .content .credits>div{
+    margin-top: 20px;
+  }
+  .lang div, .tools div {
+    width: 70px;
+    height: 60px;
+  }
+  .lang div i, .tools div i {
+    font-size: 35px;
+  }
+  .lang div span, .tools div span {
+    font-size: 16px;
+  }
+  .content .habbits{
+    gap: 11px;
+    padding-left: 30px;
+    margin-top: 10px;
+  }
+  .content .contact {
+    height: 35vh;
+  }
 }
