--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@
   --noise-url: url("/assets/images/rainbow.png");
   --normal: 24px;
   --small: 18px;
+  --large: 28px;
 }
 
 * {
@@ -52,6 +53,9 @@ body::before {
   width: 100vw;
   height: 100vh;
   background-image: var(--noise-url);
+  /* background-size: cover; */
+  /* background-repeat: no-repeat; */
+  /* background-position: center; */
   animation: noise 0.1s linear infinite;
 }
 @keyframes noise {
@@ -391,6 +395,11 @@ nav ul li i {
 }
 .project .projectname div {
   font-size: var(--small);
+  text-align: center;
+}
+
+.mobileprojectarrows {
+  display: none;
 }
 
 .content .contact {
@@ -464,6 +473,10 @@ nav ul li i {
 
 .content .credits .used div a div:hover {
   color: var(--lavender);
+}
+
+.mobilenav {
+  display: none;
 }
 
 footer {
@@ -558,7 +571,7 @@ footer div > span {
     height: 65%;
     gap: 10px;
   }
-  .terminal .prompt div{
+  .terminal .prompt div {
     margin-top: -10px;
   }
   .content .project .group .projectimage {
@@ -574,32 +587,319 @@ footer div > span {
   .leftarr {
     font-size: 30px;
   }
-  .content .contact{
+  .content .contact {
     justify-content: space-around;
   }
   .content .credits .used {
     font-size: 18px;
     margin-top: 0;
   }
-  .content .credits>div{
+  .content .credits > div {
     margin-top: 20px;
   }
-  .lang div, .tools div {
+  .lang div,
+  .tools div {
     width: 70px;
     height: 60px;
   }
-  .lang div i, .tools div i {
+  .lang div i,
+  .tools div i {
     font-size: 35px;
   }
-  .lang div span, .tools div span {
+  .lang div span,
+  .tools div span {
     font-size: 16px;
   }
-  .content .habbits{
+  .content .habbits {
     gap: 11px;
     padding-left: 30px;
     margin-top: 10px;
   }
   .content .contact {
     height: 35vh;
+  }
+}
+@media (max-width: 900px) {
+  :root {
+    --normal: 1.2rem;
+    --small: 1rem;
+    --large: 1.4rem;
+  }
+  header .instructions,
+  main .left {
+    /* visibility: hidden; */
+    display: none;
+  }
+  header .hey,
+  main .right {
+    width: 100%;
+    justify-content: center;
+  }
+
+  header {
+    height: 18vh;
+  }
+
+  header .hey img {
+    margin-left: 0;
+    width: 70vw;
+    bottom: 0;
+  }
+  main {
+    height: 72vh;
+  }
+  .terminal {
+    height: 90%;
+    width: 90%;
+  }
+
+  .terminal .prompt .text {
+    margin-left: -8px;
+    line-height: 22px;
+  }
+  .content .habbits {
+    gap: 30px;
+  }
+  .habbits .habbititem div:first-child {
+    display: none;
+  }
+  .lang,
+  .tools {
+    gap: 15px 7px;
+    justify-content: center;
+  }
+  .lang div,
+  .tools div {
+    width: 70px;
+    height: 70px;
+  }
+  .lang div i,
+  .tools div i {
+    font-size: 35px;
+  }
+  .lang div span,
+  .tools div span {
+    font-size: var(--small);
+  }
+  div.mobilenav {
+    width: 100vw;
+    height: 7vh;
+    /* border: 2px solid red; */
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+  }
+  .mobilenav nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+  }
+  .carleftarr,
+  .carrightarr {
+    font-size: 25px;
+
+    font-weight: 800;
+  }
+
+  .projectimage img {
+    width: 308px;
+  }
+  .content .project .group .leftarr,
+  .content .project .group .rightarr {
+    display: none;
+  }
+
+  .mobileprojectarrows {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    width: 100%;
+    height: 2vh;
+  }
+
+  .content .credits {
+    margin-top: -10px;
+  }
+
+  .content .contact > a {
+    width: 100%;
+  }
+
+  .content .credits > div:first-child {
+    margin-left: -20px;
+  }
+  .content .credits .used {
+    flex-direction: column;
+    gap: 20px;
+    align-items: flex-start;
+    font-size: var(--normal);
+  }
+
+  div.carousel-viewport {
+    width: 80vw;
+    height: 4vh;
+    /* border: 2px solid green; */
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    border-right: 2px solid var(--lavender);
+    border-left: 2px solid var(--lavender);
+  }
+
+  ul.carousel {
+    display: flex;
+    flex-direction: row;
+    overflow-x: auto;
+    width: 96%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+  }
+
+  ul.carousel li {
+    flex: none;
+    width: 100%;
+    font-weight: 700;
+  }
+  .mobhigh.file {
+    color: var(--dark-violet);
+    background-color: var(--blue);
+  }
+  .mobhigh.directory {
+    color: var(--dark-violet);
+    background-color: var(--mauve);
+  }
+
+  footer div span:first-child {
+    display: none;
+  }
+}
+
+@media (max-width: 425px) {
+  :root {
+    --normal: 1.2rem;
+    --small: 0.9rem;
+  }
+  .content .skills {
+    gap: 20px;
+  }
+  .content .project .group .projectimage {
+    width: 275px;
+    height: 200px;
+  }
+  .project {
+    padding: 40px 0;
+    gap: 40px;
+  }
+  .projectimage img {
+    width: 270px;
+  }
+  .content {
+    margin-top: -5px;
+  }
+  .content .habbits {
+    padding-left: 0px;
+  }
+  .content .skills {
+    margin-top: 10px;
+  }
+}
+@media (max-width: 380px) {
+  .content .credits > div:first-child {
+    margin-left: -35px;
+  }
+  :root {
+    --normal: 1.05rem;
+    --small: 0.85rem;
+  }
+  .content{
+    margin-top: 10px;
+  }
+  .content .contact > a{
+    height: 60px;
+  }
+}
+@media (max-height: 790px) {
+  header {
+    height: 20vh;
+  }
+  main {
+    height: 70vh;
+  }
+  .mobilenav {
+    height: 5vh;
+  }
+  .content {
+    margin-top: 4px;
+  }
+  .content .habbits {
+    margin-top: -10px;
+    gap: 20px;
+  }
+  .content .skills {
+    margin-top: -15px;
+    gap: 5px;
+  }
+  .content .project {
+    padding: 0px;
+  }
+  .content .contact > a i {
+    font-size: 32px;
+  }
+  .content .contact > a {
+    height: 60px;
+  }
+  .content .credits {
+    margin-top: -63px;
+  }
+}
+@media (max-height: 725px) {
+  .terminal {
+    height: 95%;
+  }
+  header {
+    height: 21vh;
+  }
+  main {
+    height: 69vh;
+  }
+  div.mobilenav {
+    height: 6vh;
+  }
+  footer {
+    height: 4vh;
+  }
+  :root {
+    --normal: 1.1rem;
+    --small: 0.85rem;
+  }
+  .content {
+    margin-top: 0px;
+  }
+  .content .habbits {
+    margin-top: 8px;
+  }
+  .content .skills {
+    margin-top: 0px;
+    gap: 20px;
+  }
+  .lang div,
+  .tools div {
+    width: 50px;
+    height: 50px;
+  }
+  .lang,
+  .tools {
+    gap: 25px 10px;
+    justify-content: center;
+  }
+  .content .contact > a {
+    height: 55px;
+  }
+  .project {
+    gap: 30px;
   }
 }
