--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@
 :root {
   --noise-url: url("/assets/images/rainbow.png");
   --normal: 1.4rem;
+  --med: 1.3rem;
   --small: 1.2rem;
   --large: 1.7rem;
 }
@@ -493,7 +494,7 @@ footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-size: var(--normal);
+  font-size: var(--med);
   font-weight: 600;
   padding: 0 20px;
 }
@@ -512,6 +513,7 @@ footer div > span {
   }
   :root {
     --normal: 22px;
+    --med: 20px;
     --small: 18px;
   }
   .prompt .text {
@@ -553,6 +555,7 @@ footer div > span {
   }
   :root {
     --normal: 20px;
+    --med: 18px;
     --small: 16px;
   }
   .terminal {
@@ -774,6 +777,7 @@ footer div > span {
 @media (max-width: 425px) {
   :root {
     --normal: 1.2rem;
+    --med: 1.1rem;
     --small: 0.9rem;
   }
   .content .skills {
@@ -806,6 +810,7 @@ footer div > span {
   }
   :root {
     --normal: 1.05rem;
+    --med: 1rem;
     --small: 0.85rem;
   }
   .content {
@@ -867,6 +872,7 @@ footer div > span {
   }
   :root {
     --normal: 1.1rem;
+    --med: 1rem;
     --small: 0.85rem;
   }
   .content {
