--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,6 @@
 :root {
   --noise-url: url("/assets/images/rainbow.png");
   --normal: 1.4rem;
-  --med: 1.3rem;
   --small: 1.2rem;
   --large: 1.7rem;
 }
@@ -17,6 +16,7 @@
 }
 
 body {
+  overflow: hidden;
   position: relative;
   background-color: var(--violet); /* base background */
   min-height: 100vh;
@@ -494,7 +494,7 @@ footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-size: var(--med);
+  font-size: var(--normal);
   font-weight: 600;
   padding: 0 20px;
 }
@@ -513,7 +513,6 @@ footer div > span {
   }
   :root {
     --normal: 22px;
-    --med: 20px;
     --small: 18px;
   }
   .prompt .text {
@@ -555,7 +554,6 @@ footer div > span {
   }
   :root {
     --normal: 20px;
-    --med: 18px;
     --small: 16px;
   }
   .terminal {
@@ -777,7 +775,6 @@ footer div > span {
 @media (max-width: 425px) {
   :root {
     --normal: 1.2rem;
-    --med: 1.1rem;
     --small: 0.9rem;
   }
   .content .skills {
@@ -810,7 +807,6 @@ footer div > span {
   }
   :root {
     --normal: 1.05rem;
-    --med: 1rem;
     --small: 0.85rem;
   }
   .content {
@@ -872,7 +868,6 @@ footer div > span {
   }
   :root {
     --normal: 1.1rem;
-    --med: 1rem;
     --small: 0.85rem;
   }
   .content {
