--- a/css/main.css
+++ b/css/main.css
@@ -299,6 +299,10 @@ nav ul li i {
 .content .habbits .habbititem div {
   text-align: left;
   width: 33%;
+  /* :root {
+    --normal: 22px;
+    --small: 18px;
+  } */
 }
 
 .content .habbits .habbititem a {
@@ -511,10 +515,10 @@ footer div > span {
     padding: 30px;
     min-height: 75%;
   }
-  :root {
+  /* :root {
     --normal: 22px;
     --small: 18px;
-  }
+  } */
   .prompt .text {
     line-height: 26px;
   }
@@ -896,10 +900,12 @@ footer div > span {
   .project {
     gap: 30px;
   }
-  .lang, .tools{
+  .lang,
+  .tools {
     row-gap: 13px;
   }
-  .lang div, .tools div{
+  .lang div,
+  .tools div {
     gap: 0px;
   }
 }
