--- a/css/main.css
+++ b/css/main.css
@@ -145,7 +145,7 @@ header .instructions:hover {
   padding: 15px 10px;
   border: 2px solid var(--mauve);
   border-radius: 5px;
-  font-size: var(--small);
+  font-size: 1.1rem;
   opacity: 0;
   pointer-events: none;
   transition: opacity 0.2s ease-in-out;
