--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+/* Ensure cursor is visible on fullscreen overlay */
+#fullscreen-overlay, #fullscreen-overlay * {
+  /* cursor: auto !important; */
+}
+@import url("https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Pixelify+Sans:wght@400..700&display=swap");
 @import "https://www.nerdfonts.com/assets/css/webfont.css";
 
